# cmake-lint

./: .coafile  .gitignore  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.rst  INSTALL  MANIFEST.in  README.md  cmakelint-diff.py  dev-requirements  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  test-requirements  tox.ini
.github/workflows/: ci.yml  test-publish.yml  test.yml
cmakelint/: main.py
samples/blender/: check.def  nolinelen.def
samples/blender/src/: CMakeLists.txt
samples/diffs/: llvm.diff
samples/llvm/: check.def  checknofilename.def
samples/opencv/: check.def
test/: cli_test.py  cmakelint_test.py
